# auto_eval_agent

./: .env  .env.example  .gitignore  README.md  demo_real_judge.py  demo_run.py  probe_agent_loop.py  pyproject.toml  rereport.py
assets/: 盲评AgentLoop.flowchart.excalidraw
config/: judges.yaml  models.yaml  rubrics.yaml
config/skills/: advisory.yaml  creative.yaml  default.yaml  factual.yaml  math_logic.yaml  translation.yaml
data/: dataset.jsonl
docs/: 单回答盲评.md  项目文档.md
src/auto_eval/: __init__.py  cli.py  config.py  dataset.py  engine.py  schema.py
src/auto_eval/analysis/: __init__.py  advisor.py  aggregate.py  cases.py  compare.py
src/auto_eval/batch/: __init__.py  checkpoint.py  orchestrator.py  ratelimit.py  retry.py
src/auto_eval/judges/: __init__.py  arbitrator.py  base.py  ensemble.py  pairwise_judge.py  prompts.py  rubric_judge.py  skill_router.py  tools.py
src/auto_eval/meta/: __init__.py  calibration.py  ground_truth.py
src/auto_eval/report/: __init__.py  domain_report.py  render.py
src/auto_eval/runners/: __init__.py  base.py  cli_runner.py  func_runner.py  http_runner.py  openai_compat.py
src/auto_eval/web/: __init__.py  parse_input.py  runner.py  server.py  tasks.py
src/auto_eval/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_dataset.py  test_domain_report.py  test_ensemble.py  test_ground_truth.py  test_judge_parse_failures.py  test_pairwise.py  test_prompt_parsing.py  test_smoke.py
