[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-eval-agent"
version = "0.1.0"
description = "自动评估与优化建议 Agent：盲评 + 多裁判 + 元评测的 LLM 评测框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "openai>=1.10",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
cluster = ["scikit-learn>=1.3"]      # advisor 弱点聚类
embed = ["sentence-transformers>=2.5"]  # 本地 embedding 语义相似度
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]

[project.scripts]
auto-eval = "auto_eval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
